fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -183,7 +183,7 @@ body {
 	font-weight: var(--fw-bold);
 	text-align: center;
 	height: 250px;
-	width: 3250px;
+	width: 325px;
 	display: block;
 	color: var(--color-dark-brown1);
 	margin: auto;
